Fix spacing in company offer create form

--- a/src/components/EditOffer/RecipientsFormSection/styles.module.scss
+++ b/src/components/EditOffer/RecipientsFormSection/styles.module.scss
@@ -1,5 +1,5 @@
 @import "$styles/_variables";
 
 div.careers {
-  margin: 0 0 $spacing-xl;
+  margin: 0 0 $spacing-m;
 }
