--- a/src/components/SearchSelector/MultipleSearchSelector/styles.module.scss
+++ b/src/components/SearchSelector/MultipleSearchSelector/styles.module.scss
@@ -3,7 +3,3 @@
 div.selector {
   min-height: unset;
 }
-
-.container {
-  min-height: 90px;
-}
